--- a/demo_1/Makefile
+++ b/demo_1/Makefile
@@ -6,9 +6,11 @@
 
 # General settings
 	# See $(GFXLIB)/tools/gmake_scripts/readme.txt for the list of variables
+	BUILDDIR				= build
+	PROJECT					= coba
 	OPT_OS					= chibios
 	OPT_THUMB				= yes
-	OPT_LINK_OPTIMIZE		= no
+	OPT_LINK_OPTIMIZE       = no
 	OPT_CPU					= stm32m4
 
 # uGFX settings
