progress (need faster)

--- a/demo_1/Makefile
+++ b/demo_1/Makefile
@@ -46,6 +46,7 @@ GFXSRC +=   $(DEMODIR)/main.c \
             $(DEMODIR)/m_data.c \
             $(DEMODIR)/m_exti.c \
             $(DEMODIR)/m_gui.c \
+            $(DEMODIR)/m_gpt.c \
             $(DEMODIR)/m_pwm.c
 
 include $(CHIBIOS)/test/rt/test.mk
