--- a/demo/Makefile
+++ b/demo/Makefile
@@ -34,24 +34,9 @@ ifeq ($(OPT_OS),chibios)
 	CHIBIOS_LDSCRIPT		= STM32F429xI.ld
 endif
 
-DEMODIR = ./main
-GFXINC +=   $(DEMODIR) \
-            $(DEMODIR)/dac \
-            $(DEMODIR)/wave
-GFXSRC +=   $(DEMODIR)/main.c \
-            $(DEMODIR)/dac/mcp4725.c \
-            $(DEMODIR)/wave/m_sine.c \
-            $(DEMODIR)/usbcfg.c \
-            $(DEMODIR)/shell.c \
-            $(DEMODIR)/m_shell.c \
-            $(DEMODIR)/m_data.c \
-            $(DEMODIR)/m_exti.c \
-            $(DEMODIR)/m_web.c \
-            $(DEMODIR)/m_gui.c \
-            $(DEMODIR)/m_gpt.c \
-            $(DEMODIR)/m_pwm.c
-
-include $(CHIBIOS)/test/rt/test.mk
+DEMODIR =
+GFXINC +=
+GFXSRC +=   main.c shell.c usbcfg.c m_shell.c m_gui.c
 
 ##############################################################################################
 # Set these for your project
@@ -73,7 +58,7 @@ SRC      =  $(TESTSRC) \
             #$(CHIBIOS)/os/various/shell.c
 
 OBJS     =
-DEFS     =  -DSTM32_PLLSAIN_VALUE=192 -DSTM32_PLLSAIQ_VALUE=7
+DEFS     =
 LIBS     =
 INCPATH  =  $(TESTINC) \
             $(CHIBIOS)/os/various \
